--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+**.venv/*
+**__pycache__/*
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
